Replace dept to CSED, add placeholders for names

--- a/certificate.tex
+++ b/certificate.tex
@@ -3,13 +3,13 @@
 
 \begin{center}
 
-\huge{Centre for Value Education}\\
+\huge{Department of Computer Science and Engineering}\\[0.5cm]
 \normalsize
 \textsc{National Institute of Technology Calicut}\\[2.0cm]
 
 \emph{\LARGE Certificate}\\[2.5cm]
 \end{center}
-\normalsize This is to certify that this is a bonafide record of the project presented by the students whose names are given below during <Monsoon/Winter and Year here> in partial fulfilment of the requirement of the course on value education.\\[1.0cm]
+\normalsize This is to certify that this is a bonafide record of the project presented by the students whose names are given below during <Monsoon/Winter and Year here> in partial fulfilment of the requirements of the degree of Bachelor of Technology in Computer Science and Engineering.\\[1.0cm]
 
 \begin{table}[h]
 \centering
@@ -27,8 +27,10 @@ Roll No & Names of Students \\ \\ \hline
 
 % Bottom of the page
 \begin{flushright}
-Faculty In-charge\\[1.5cm]
-Course Co-ordinator\\[1.0cm]
+<Guide name here>\\
+(Project Guide)\\[1.5cm]
+<Coordinator name here>\\
+(Course Coordinator)\\
 \end{flushright}
 
 \begin{flushleft}
