--- a/work-done.tex
+++ b/work-done.tex
@@ -10,6 +10,15 @@ some text\cite{citation-2-name-here}, some more text
 
 \subsection{<Sub-section title>}
 
+Refer figure \ref{fig:label}.
+
+\begin{figure}[htb]
+\centering
+\includegraphics[scale=0.3]{./glider} % e.g. insert ./image for image.png in the working directory, adjust scale as necessary
+\caption{<Caption here>}
+\label{fig:label} % insert suitable label, this is used to refer to a fig from within the text as shown above
+\end{figure}
+
 \subsection{<Sub-section title>}
 
 
