Major changes in Title page

--- a/title.tex
+++ b/title.tex
@@ -2,13 +2,19 @@
 
 \begin{center}
 
-\textup{\large A report on}\\[1.0cm]
+\textup{\small {\bf CSU498 Project} \\ Report}\\[0.2in]
 
 % Title
-\uppercase{\Large \textbf {<title here>}}\\[3.0cm]
+\Large \textbf {<Title here>}\\[0.5in]
 
-% Done by
-\normalsize Done by \\
+       \small \emph{Submitted in partial fulfilment of\\
+        the requirements for the award of the degree of}
+        \vspace{.2in}
+
+       {\bf Bachelor of Technology \\in\\ Computer Science and Engineering}\\[0.5in]
+
+% Submitted by
+\normalsize Submitted by \\
 \begin{table}[h]
 \centering
 \begin{tabular}{lr}\hline \\
@@ -20,16 +26,20 @@ Roll No & Names of Students \\ \\ \hline
 \end{tabular}
 \end{table}
 
+\vspace{.1in}
+Under the guidance of\\
+{\textbf{<Guide's name here>}}\\[0.2in]
+
 \vfill
 
 % Bottom of the page
-\includegraphics[width=0.20\textwidth]{./nitc-logo}\\[1cm]
-\LARGE{Centre for Value Education}\\
+\includegraphics[width=0.18\textwidth]{./nitc-logo}\\[0.1in]
+\Large{Department of Computer Science and Engineering}\\
 \normalsize
 \textsc{National Institute of Technology Calicut}\\
-Calicut, Kerala 673 601 \\
-\vspace{0.5cm}
-Monsoon Semester
+Calicut, Kerala, India - 673 601 \\
+\vspace{0.2cm}
+Winter Semester 2013
 
 \end{center}
 
