Update main report for Major project template
Remove Objective section
Move Literature Survey to Intro section

--- a/introduction.tex
+++ b/introduction.tex
@@ -5,4 +5,10 @@
 
 \subsection{Literature Survey}
 
+\subsubsection{<Sub-subsection title>}
+some text\cite{citation-1-name-here}, some more text
+
+\subsubsection{<Sub-subsection title>}
+even more text\footnote{<footnote here>}, and even more.
+
 \section{Motivation}
