Fix numbering bug for Acknowledgement page

--- a/acknow.tex
+++ b/acknow.tex
@@ -1,4 +1,6 @@
-\clearpage
+\cleardoublepage
+%\pagebreak
+\phantomsection
 \addcontentsline{toc}{chapter}{Acknowledgements}
 \chapter*{Acknowledgments}
 \vspace{1.0in}
