--- a/title.tex
+++ b/title.tex
@@ -7,7 +7,7 @@
 % Title
 \Large \textbf {<Title here>}\\[0.5in]
 
-       \small \emph{Submitted in partial fulfilment of\\
+       \small \emph{Submitted in partial fulfillment of\\
         the requirements for the award of the degree of}
         \vspace{.2in}
 
@@ -37,7 +37,7 @@ Under the guidance of\\
 \Large{Department of Computer Science and Engineering}\\
 \normalsize
 \textsc{National Institute of Technology Calicut}\\
-Calicut, Kerala, India - 673 601 \\
+Calicut, Kerala, India -- 673 601 \\
 \vspace{0.2cm}
 Winter Semester 2013
 
