--- a/title.tex
+++ b/title.tex
@@ -2,10 +2,10 @@
 
 \begin{center}
 
-\textup{\small {\bf CSU498 Project} \\ Report}\\[0.2in]
+\textup{\small {\bf CS4089 Project} \\ Report}\\[0.2in]
 
 % Title
-\Large \textbf {<Title here>}\\[0.5in]
+\Large \textbf {Intrusion detection System on the basis of anomalky in sequence of system calls}\\[0.5in]
 
        \small \emph{Submitted in partial fulfillment of\\
         the requirements for the award of the degree of}
@@ -20,15 +20,14 @@
 \begin{tabular}{lr}\hline \\
 Roll No & Names of Students \\ \\ \hline
 \\
-<Roll no here> & <Name here> \\
-<Roll no here> & <Name here> \\ 
-<Roll no here> & <Name here> \\ \\ \hline 
+B100045CS & K S Kurian \\
+B100257CS & Abijith K P \\ \\ \hline 
 \end{tabular}
 \end{table}
 
 \vspace{.1in}
 Under the guidance of\\
-{\textbf{<Guide's name here>}}\\[0.2in]
+{\textbf{Dr.Vinod Pathari}}\\[0.2in]
 
 \vfill
 
@@ -39,7 +38,7 @@ Under the guidance of\\
 \textsc{National Institute of Technology Calicut}\\
 Calicut, Kerala, India -- 673 601 \\
 \vspace{0.2cm}
-Winter Semester 2013
+Winter Semester 2014
 
 \end{center}
 
