few more additions; updating from drive

--- a/current_work.tex
+++ b/current_work.tex
@@ -1,5 +1,11 @@
-\chapter{Current Work}
+\section{Current Work}
 
+\subsection{Idea}
+Basic idea is to make a signature for an application \\
+Compare sequence of system calls of an application with the set of signatures. \\
+Calculate the deviation from the signature. If it is over a threshold for a certain program then consider that as a malware. \\
+
+\subsection{Implementation}
 \begin{itemize}
     \item[] Ist Phase : Preprocessing Stage
     \item[] \begin{itemize}
