--- a/future-work.tex
+++ b/future-work.tex
@@ -1,3 +1,26 @@
-\chapter{Work Remaining}
+\section{Work Remaining}
 
-<Future work here>
+\subsection{Implementation}
+
+\begin{itemize}
+    \item[] Threshold measure in terms of the entity to be observed and the threshold count of the entity, to identify the anomaly is to be found
+    \item[] An automated system for doing both signature creation and attack identification is to be implemented
+\end{itemize}
+
+\subsection{Testing}
+
+    \begin{itemize}
+        \item[] Dataset was obtained from: http://www.cs.unm.edu/~immsec/begin.html
+        \item[] Processes which are used for testing the software:
+            \begin{itemize}
+                \item[] sendmail
+                \item[] ftp
+                \item[] lpr
+                \item[] xlock
+                \item[] named
+                \item[] login
+                \item[] ps
+                \item[] inetd
+                \item[] sendmail
+            \end{itemize}
+    \end{itemize}
