--- a/title.tex
+++ b/title.tex
@@ -5,7 +5,7 @@
 \textup{\small {\bf CS4089 Project} \\ Report}\\[0.2in]
 
 % Title
-\Large \textbf {Intrusion detection System on the basis of anomalky in sequence of system calls}\\[0.5in]
+\Large \textbf {Intrusion Detection System on the basis of anomaly in sequence of System Calls}\\[0.5in]
 
        \small \emph{Submitted in partial fulfillment of\\
         the requirements for the award of the degree of}
