--- a/report.tex
+++ b/report.tex
@@ -48,7 +48,7 @@
 % \input{./introduction.tex} %literature survey included in this
 % \input{./work-done.tex}
 
-\newpage
+% \newpage
 %% work remaining
 \input{./future-work.tex}
 % \input{./conclusion.tex}
