1st draft: to be modified

--- a/prob-definition.tex
+++ b/prob-definition.tex
@@ -4,5 +4,5 @@
 
 \begin{quotation}
     \hspace{100pt} \textbf{Abstract} \\
-\textsf{In this project we develop a method for detecting whether a process is a malware using sequence  of system calls invoked by the process. This works as a host based Intrusion Detection System. Signature backbone is created using the largest sequence of repeating sub-sequence and the branches from the backbone sequence is saved in another list, which together forms the complete signature. It uses an idea similar to that of poset to represent the branches for the “signature”. The attack is identified by measuring the deviation of the input sequence of system calls from the signature created earlier either in a dynamic or static environment.}
+\textsf{In this project we develop a method for detecting malware using the sequence of system calls invoked by a process. This works as a host based Intrusion Detection System by comparing the process with a signature database. Each signature has a primary backbone that represents the workflow of an application and a secondary list of possible branches from the main thread. In the preprocessing stage, the signature backbone is created using the largest common subsequence derived from the input dataset. The differences from the backbone are saved as branches in the secondary list. It uses an idea similar to that of poset to represent the branches for the signature. The attack is identified by measuring the deviation of system calls of a suspected application from the signature either in a dynamic or static environment.}
 \end{quotation}
