--- a/current_work.tex
+++ b/current_work.tex
@@ -8,28 +8,27 @@ Basic idea behind, is to make a signature for uniquely identifying an applicatio
     \item[] \textbf{Ist Phase}: Preprocessing Stage
     \item[] \begin{itemize}
                 \item[] \textbf{Input}: A sequence of system calls during normal running of an application. 
-                \item[] \textbf{Output}: A resultant sequence of system calls after eliminating the consecutive repetition of sequences of system calls and the size of the largest repeating sequence.
+                \item[] \textbf{Output}: A resultant sequence of system calls after eliminating repetitive sequences of system calls and the size of the largest repeating sequence.
             \end{itemize}
-    \item[] Description: To avoid data redundancy during signature creation by modifying the sequence of system calls in such a way that information is not lost while integrity it’s is retained.
+    \item[] Description: To avoid data redundancy during signature creation by modifying the sequence of system calls in such a way that information is not lost while it's integrity is retained.
 
     \item[] \textbf{IInd Phase}: Processing Stage
     \item[] \begin{itemize}
-                \item[] \textbf{Input}: Set of sequence of system calls from various normal runs of an application over different inputs, after undergoing the preprocessing stage.
-                \item[] \textbf{Output}: Creates a consolidated signature without losing any information from any of the sequence of system calls.
+                \item[] \textbf{Input}: Preprocessed set of sequence of system calls from various normal runs of an application over different inputs.
+                \item[] \textbf{Output}: A consolidated signature without losing any information from any of the sequence of system calls.
             \end{itemize}
-    \item[] Description : Signature creation for each applications from the set of sequential system calls  multiple runs.
-
-    \item[] \textbf{IIIrd Phase}: Feedback system.
+    \item[] Description : Signature creation for each application from the set of sequential system calls obtained after running the application multiple times.    
+    \item[] \textbf{IIIrd Phase}: Feedback system
     \item[] \begin{itemize}
-                \item[] \textbf{Input}: The signature of the application and sequence of system calls or an attack of the known application to be incorporated into the signature.
-                \item[] \textbf{Output}: Additional sequence of system calls are incorporated or a sequence of system calls are removed from the signature hence thereby a system of feedback is incorporated.
+                \item[] \textbf{Input}: The signature of the application and a sequence of system calls or a known attack of the application to be incorporated into the signature.
+                \item[] \textbf{Output}: Additional sequence of system calls are incorporated or a sequence of system calls are removed from the signature.
             \end{itemize}
     \item[] Description: Feedback system and hence improving the signature.
 
-    \item[] IVth Phase: Malware detection.
+    \item[] \textbf{IVth Phase}: Malware detection
     \item[] \begin{itemize}
                 \item[] \textbf{Input}: Set of signatures of the applications considered and the log of system calls for the running of an unknown application.
-                \item[] \textbf{Output}: Classifying the application as a malware or as normal running.
+                \item[] \textbf{Output}: Classifying the application as a malware or as normal.
             \end{itemize}
-    \item[] Description: Identifying anomaly in the running of an application by matching with the created set of signature.
+    \item[] Description: Identifying anomaly in the running of an application by matching with the created set of signatures.
 \end{itemize}
