--- a/future-work.tex
+++ b/future-work.tex
@@ -3,14 +3,14 @@
 \subsection{Implementation}
 
 \begin{itemize}
-    \item[*] Threshold measure in terms of the entity to be observed and the threshold count of the entity, to identify the anomaly is to be found.
+    \item[*] Threshold value to be fixed in order to identify anomalies.
     \item[*] A buffer will be incorporated in the software design in order to work with dynamic inputs.
-    \item[*] An automated system for doing both signature creation and attack identification is to be implemented.
+    \item[*] An automated system for doing both signature creation and attack identification has to be implemented.
 \end{itemize}
 
 \subsection{Testing}
 
     \begin{itemize}
         \item[*] Dataset was obtained from: http://www.cs.unm.edu/~immsec/begin.html
-        \item[*] Processes which are used for testing intrution detection are sendmail, ftp, lpr, xlock, named, login, ps, inetd, sendmail.
+        \item[*] Processes which are used for testing intrution detection are sendmail, ftp, lpr, xlock, named, login, ps, inetd.
     \end{itemize}
