modified Current Work - my first commit

--- a/current_work.tex
+++ b/current_work.tex
@@ -1,7 +1,7 @@
 \section{Current Work}
 
 \subsection{Idea}
-Basic idea behind, is to make a signature for uniquely identifying an application. Then compare the input sequence of system calls of a random process with the set of signatures. After calculating the deviation from the signature, if it is over a threshold value for a certain process then consider that as a malware.
+Basic idea is to make a signature for uniquely identifying an application. Then compare the input sequence of system calls of a random process with the set of signatures. After calculating the deviation from the signature, if it is over a threshold value for a certain process declare as malware.
 
 \subsection{Implementation}
 \begin{itemize}
