modified Current Work - completed

--- a/current_work.tex
+++ b/current_work.tex
@@ -10,7 +10,7 @@ Basic idea is to make a signature for uniquely identifying an application. Then 
                 \item[] \textbf{Input}: A sequence of system calls during normal running of an application. 
                 \item[] \textbf{Output}: A resultant sequence of system calls after eliminating repetitive sequences of system calls and the size of the largest repeating sequence.
             \end{itemize}
-    \item[] Description: To avoid data redundancy during signature creation by modifying the sequence of system calls in such a way that information is not lost while it's integrity is retained.
+    \item[] Description: To avoid data redundancy during signature creation by modifying the sequence of system calls in such a way that information is not lost while its integrity is retained.
 
     \item[] \textbf{IInd Phase}: Processing Stage
     \item[] \begin{itemize}
